nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
      - name: config
        configMap:
          name: nginx
      - name: nginx-tmp
        emptyDir: {}
      containers:
      - name: nginx
        image: nginxinc/nginx-unprivileged:1.31.5-alpine3.24
        args:
        - /docker-entrypoint.sh
        - nginx
        - -g
        - daemon off;
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d
          readOnly: true
        - name: nginx-tmp
          mountPath: /tmp
        lifecycle:
          preStop:
            sleep:
              # Sleep for 15 seconds to allow any kube-proxy or ingress gateway
              # client to stop initiating new connections. After that, nginx
              # will start graceful shutdown by stopping to accept new connections
              # and waiting for existing requests to finish, as well as responding
              # with 'Connection: close' for still incoming  requests on keep-alive
              # connections for keepalive_min_timeout.
              seconds: 15
        startupProbe:
          successThreshold: 1
          failureThreshold: 30
          periodSeconds: 1
          timeoutSeconds: 1
          httpGet:
            path: /ready
            port: 8080
        readinessProbe:
          successThreshold: 1
          failureThreshold: 2
          periodSeconds: 3
          timeoutSeconds: 1
          httpGet:
            path: /ready
            port: 8080
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          privileged: false
          capabilities:
            drop:
              - ALL
          runAsNonRoot: true
          runAsUser: 1000
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: nginx
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
